Solves #6537 Align actions on Admin panel
I took the route of adding a blank space that takes the same space as icon would.

--- a/decidim-admin/app/assets/stylesheets/decidim/admin/extra/_action-icon.scss
+++ b/decidim-admin/app/assets/stylesheets/decidim/admin/extra/_action-icon.scss
@@ -10,6 +10,12 @@
       vertical-align: bottom;
     }
   }
+  .action-space {
+    display: inline-block;
+    &:not(:last-child) {
+    margin-right: 1rem;
+    }
+  }
 }
 
 a.red-icon{
